manifests/elasticsearch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: logging
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10
        resources:
          requests:
            cpu: 50m
            memory: 512Mi
          limits:
            cpu: 400m
            memory: 1Gi
        ports:
        - containerPort: 9200
          name: db
        - containerPort: 9300
          name: transport
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
  namespace: logging
spec:
  selector:
    app: elasticsearch
  ports:
  - name: db
    port: 9200
    targetPort: 9200
  - name: transport
    port: 9300
    targetPort: 9300
